<resources>
    <string name="app_name">hito</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="Create">Create</string>
    <string name="an_account_dot">an account.</string>
    <string name="Forgot_password">Forgot password</string>
    <string name="Forgot">Forgot</string>
    <string name="your_password_question">your password?</string>
    <string name="Confirm">Confirm</string>
    <string name="Search">Search</string>
    <string name="placeholder_username">schemabuoi</string>
    <string name="placeholder_date">14 May 2020 16:00</string>
    <string name="placeholder_message_to_username">Message to @schemabuoi</string>
    <string name="placeholder_message_text">Hello greg here, how u doing?</string>
</resources>
