<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrMainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?attr/colorBackground"
    tools:context=".view.entry.CreateAccountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conMainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/back"
            android:scaleType="fitXY">

        </ImageButton>

        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnBack"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvAnAccount"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.01"
            android:layout_marginStart="42dp"
            android:layout_marginTop="24dp"
            android:text="@string/Forgot"
            android:textColor="?attr/colorText"
            android:textSize="@dimen/_32ssp">

        </TextView>

        <TextView
            android:id="@+id/tvAnAccount"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvForgot"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/etEmail"
            android:layout_marginStart="42dp"
            android:text="@string/your_password_question"
            android:textColor="?attr/colorText"
            android:textSize="@dimen/_32ssp">

        </TextView>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@id/tvAnAccount"
            app:layout_constraintBottom_toTopOf="@id/tvEmailError"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="42dp"
            android:padding="10dp"
            android:background="@drawable/edit_text"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:textColor="?attr/colorText"
            android:hint="@string/email"
            android:textColorHint="?attr/colorTextContrast"
            android:textCursorDrawable="@null">

        </EditText>

        <TextView
            android:id="@+id/tvEmailError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintLeft_toLeftOf="@id/etEmail"
            app:layout_constraintBottom_toTopOf="@id/btnConfirm"
            android:layout_marginTop="4dp"
            android:layout_marginStart="10dp"
            android:textColor="?attr/colorError"
            android:visibility="gone">

        </TextView>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/button"
            android:text="@string/Confirm"
            android:textSize="13sp"
            android:textFontWeight="700"
            android:textColor="?attr/colorText"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/tvEmailError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        </Button>

        <RelativeLayout
            android:id="@+id/relLoadingPanel"
            android:background="#99000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fitsSystemWindows="true"
            android:visibility="gone"
            android:elevation="10dp">

            <ProgressBar
                android:id="@+id/pbrLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="?attr/colorPrimary"/>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>