<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrMainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?attr/colorBackground"
    tools:context=".ui.view.entry.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conMainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/etEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:padding="10dp"
            android:background="@drawable/edit_text"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:textColor="?attr/colorText"
            android:hint="@string/email"
            android:textColorHint="?attr/colorTextContrast"
            android:textCursorDrawable="@null"
            app:layout_constraintBottom_toTopOf="@+id/tvEmailError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo">

        </EditText>

        <TextView
            android:id="@+id/tvEmailError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintLeft_toLeftOf="@id/etEmail"
            app:layout_constraintBottom_toTopOf="@id/etPassword"
            android:layout_marginTop="4dp"
            android:layout_marginStart="10dp"
            android:textColor="?attr/colorError"
            android:visibility="gone">

        </TextView>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:padding="10dp"
            android:background="@drawable/edit_text"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:textColor="?attr/colorText"
            android:hint="@string/Password"
            android:textColorHint="?attr/colorTextContrast"
            android:textCursorDrawable="@null"
            app:layout_constraintBottom_toTopOf="@+id/tvPasswordError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmailError">

        </EditText>

        <TextView
            android:id="@+id/tvPasswordError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintLeft_toLeftOf="@id/etPassword"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            android:layout_marginTop="4dp"
            android:layout_marginStart="10dp"
            android:textColor="?attr/colorError"
            android:visibility="gone">

        </TextView>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textSize="13sp"
            android:textFontWeight="700"
            android:textColor="?attr/colorText"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/tvPasswordError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </Button>

        <Button
            android:id="@+id/tvCreateAccount"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.49"
            android:layout_height="54dp"
            style="?android:attr/borderlessButtonStyle"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="?attr/colorBackground"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textColor="?attr/colorText"
            app:layout_constraintBottom_toBottomOf="@+id/vwAdditionalActionsDivider"
            app:layout_constraintEnd_toStartOf="@+id/vwAdditionalActionsDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/vwAdditionalActionsDivider">

        </Button>

        <View
            android:id="@+id/vwAdditionalActionsDivider"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:background="?attr/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintVertical_bias="0.99"/>

        <Button
            android:id="@+id/tvForgotPassword"
            android:layout_width="0dp"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.49"
            android:layout_height="54dp"
            style="?android:attr/borderlessButtonStyle"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="?attr/colorBackground"
            android:text="@string/Forgot_password"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textColor="?attr/colorText"
            app:layout_constraintBottom_toBottomOf="@+id/vwAdditionalActionsDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vwAdditionalActionsDivider"
            app:layout_constraintTop_toTopOf="@+id/vwAdditionalActionsDivider">

        </Button>

        <RelativeLayout
            android:id="@+id/relLoadingPanel"
            android:background="#99000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fitsSystemWindows="true"
            android:visibility="gone"
            android:elevation="10dp">

            <ProgressBar
                android:id="@+id/pbrLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="?attr/colorPrimary"/>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/scrMainContainer"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="?attr/colorBackground"-->
<!--    android:fillViewport="true"-->
<!--    tools:context=".view.LoginActivity">-->

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/conMainContainer"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

<!--        <ImageView-->
<!--            android:id="@+id/imgLogo"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="100dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:src="@drawable/logo"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/tvEmail"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

<!--        </ImageView>-->

<!--        <TextView-->
<!--            android:id="@+id/tvEmail"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="4dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:text="@string/email"-->
<!--            android:textAllCaps="true"-->
<!--            android:textColor="?attr/colorTextContrast"-->
<!--            android:textFontWeight="700"-->
<!--            android:textSize="12sp"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/etEmail"-->
<!--            app:layout_constraintStart_toStartOf="@id/etEmail"-->
<!--            app:layout_constraintTop_toBottomOf="@id/imgLogo">-->

<!--        </TextView>-->

<!--        <EditText-->
<!--            android:id="@+id/etEmail"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginTop="4dp"-->
<!--            android:layout_marginEnd="32dp"-->
<!--            android:background="@drawable/edit_text"-->
<!--            android:inputType="textEmailAddress"-->
<!--            android:padding="10dp"-->
<!--            android:textColor="?attr/colorText"-->
<!--            android:textCursorDrawable="@null"-->
<!--            android:textSize="16sp"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/tvPassword"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/tvEmail">-->

<!--        </EditText>-->

<!--        <TextView-->
<!--            android:id="@+id/tvPassword"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="4dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:text="@string/Password"-->
<!--            android:textAllCaps="true"-->
<!--            android:textColor="?attr/colorTextContrast"-->
<!--            android:textFontWeight="700"-->
<!--            android:textSize="12sp"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/etPassword"-->
<!--            app:layout_constraintStart_toStartOf="@id/etPassword"-->
<!--            app:layout_constraintTop_toBottomOf="@id/etEmail">-->

<!--        </TextView>-->

<!--        <EditText-->
<!--            android:id="@+id/etPassword"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginTop="4dp"-->
<!--            android:layout_marginEnd="32dp"-->
<!--            android:background="@drawable/edit_text"-->
<!--            android:inputType="textPassword"-->
<!--            android:padding="10dp"-->
<!--            android:textColor="?attr/colorText"-->
<!--            android:textCursorDrawable="@null"-->
<!--            android:textSize="15sp"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/btnLogin"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/tvPassword">-->

<!--        </EditText>-->

<!--        <Button-->
<!--            android:id="@+id/btnLogin"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginTop="24dp"-->
<!--            android:layout_marginEnd="32dp"-->
<!--            android:background="@drawable/button"-->
<!--            android:foreground="?android:attr/selectableItemBackground"-->
<!--            android:text="@string/login"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="?attr/colorText"-->
<!--            android:textSize="15sp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/etPassword">-->

<!--        </Button>-->

<!--        <Button-->
<!--            android:id="@+id/tvCreateAccount"-->
<!--            style="?android:attr/borderlessButtonStyle"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="54dp"-->
<!--            android:background="?attr/colorBackground"-->
<!--            android:foreground="?android:attr/selectableItemBackground"-->
<!--            android:text="@string/create_account"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="?attr/colorText"-->
<!--            android:textSize="15sp"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/vwAdditionalActionsDivider"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/vwAdditionalActionsDivider"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@+id/vwAdditionalActionsDivider"-->
<!--            app:layout_constraintWidth_default="percent"-->
<!--            app:layout_constraintWidth_percent="0.49">-->

<!--        </Button>-->

<!--        <View-->
<!--            android:id="@+id/vwAdditionalActionsDivider"-->
<!--            android:layout_width="1dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginTop="32dp"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:background="?attr/colorText"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/btnLogin"-->
<!--            app:layout_constraintVertical_bias="0.99" />-->

<!--        <Button-->
<!--            android:id="@+id/tvForgotPassword"-->
<!--            style="?android:attr/borderlessButtonStyle"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="54dp"-->
<!--            android:background="?attr/colorBackground"-->
<!--            android:foreground="?android:attr/selectableItemBackground"-->
<!--            android:text="@string/Forgot_password"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="?attr/colorText"-->
<!--            android:textSize="15sp"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/vwAdditionalActionsDivider"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/vwAdditionalActionsDivider"-->
<!--            app:layout_constraintTop_toTopOf="@+id/vwAdditionalActionsDivider"-->
<!--            app:layout_constraintWidth_default="percent"-->
<!--            app:layout_constraintWidth_percent="0.49">-->

<!--        </Button>-->

<!--        <RelativeLayout-->
<!--            android:id="@+id/relLoadingPanel"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="#66000000"-->
<!--            android:elevation="10dp"-->
<!--            android:gravity="center"-->
<!--            android:paddingTop="60dp"-->
<!--            android:visibility="invisible"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

<!--            <ProgressBar-->
<!--                android:id="@+id/pbrLoading"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:indeterminate="true"-->
<!--                android:indeterminateTint="?attr/colorPrimary" />-->

<!--        </RelativeLayout>-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->


<!--</ScrollView>-->